#1094 fixed message notification spacing

--- a/web/assets/css/main-style.css
+++ b/web/assets/css/main-style.css
@@ -175,7 +175,7 @@ section {
     background-color: #ff613a;
     border-radius: 90px;
     height: 20px;
-    left: 0px;
+    left: -5px;
     line-height: 19px;
     position: absolute;
     text-align: center;
